Fixed overflow issues, causing extra space on the x axis. Fixed Guide and home screen stacks.

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,20 +1,26 @@
 .container {
-  width:100vw;
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
+  width: 100%;
+  overflow: hidden;
+  height: 100%;
+  padding-right: 15px;
+  
+  /* width:100vw; */
+  /* min-height: 100vh; */
+  /* padding: 0 0.5rem; */
+  /* display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin:0;
+  margin:0; */
   /* height: 100vh; */
 }
 
 .logo {
-  margin-top:6px;
+  
 }
 
 .main {
+  width: 100%;
   padding-bottom: 50px;
   margin:0;
   /* padding: 5rem 0; */
@@ -26,10 +32,11 @@
 }
 
 .header {
+  /* margin-bottom:70px; */
   z-index:10;
   background: rgba(40,41,42, 8);
   opacity:90%;
-  width:100vw;
+  max-width:100vw;
   padding-top:20px;
   /* padding-left:20px; */
   padding-bottom:10px;
@@ -77,16 +84,18 @@
 }
 
 .footer {
+  width:100vw;
+  /* max-width:100vw; */
   padding-bottom: 13px;
-  width: 100vw;
   max-height: 140px;
   min-height:140px;
   border-top: 1px solid #3D3E3F;
   background-color: #3D3E3F;
   color:#ffffff;
   display: flex;
+  
   justify-content: center;
-  align-items: center;
+  
 }
 .flex{
   padding:10px;
@@ -113,6 +122,7 @@
 }
 
 .title {
+  padding-top: 50px;
   margin: 0;
   line-height: 1.15;
   font-size: 3.5rem; 
@@ -189,10 +199,12 @@
   }
 
 .sec {
-  float:left;
-  position:relative;
-  flex-shrink: 0;
-  flex-flow: row wrap;
+  /* width: 100%; */
+  /* min-width:100vw; */
+  /* float:left; */
+  /* position:relative; */
+  /* flex-shrink: 2; */
+  /* flex-flow: row wrap; */
   }
 
 .spinner {
